--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,8 +1,8 @@
 karl package Changelog
 ======================
 
-Unreleased
-==========
+4.26 (2017-01-12)
+=================
 
 - jsonindex queries that returned orphaned content (no __parent__)
   failed. (LP #1655485)
@@ -15,7 +15,7 @@ Unreleased
 
 - Added pgevolve to manage Postgres schema changes.
 
-- Handle zer-count jsonindex queries. (LP #1655488)
+- Handle zero-count jsonindex queries. (LP #1655488)
 
 4.25.1 (2017-01-07)
 ===================
