--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,10 +1,12 @@
 karl package Changelog
 ======================
 
-Unreleased
+4.29
 ==========
 
 - Fix idle in transacton in offline scripts (PR 1654323)
+
+- Enable the Ajax usage for SSO by uncommenting the line of JS
 
 4.27.1 (2017-03-28)
 ===================
